Fix UI bug on mobile

--- a/assets/styles/elements.css
+++ b/assets/styles/elements.css
@@ -8,7 +8,6 @@ figure {
 
 img {
   justify-self: stretch;
-  align-self: stretch;
 }
 
 /* Forms */
